--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "saddler",
   "description": "The best module ever.",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "homepage": "https://github.com/sanemat/saddler",
   "bugs": "https://github.com/sanemat/saddler/issues",
   "license": "MIT",
@@ -14,21 +14,21 @@
     "type": "git",
     "url": "https://github.com/sanemat/saddler"
   },
-  "keywords":[],
+  "keywords": [],
   "dependencies": {},
   "devDependencies": {
+    "coveralls": "^2.11.1",
     "gulp": "^3.8.8",
-    "gulp-util": "^3.0.1",
     "gulp-bump": "^0.1.11",
+    "gulp-istanbul": "^0.6.0",
     "gulp-jscs": "^1.1.2",
     "gulp-jshint": "^1.8.4",
-    "gulp-mocha": "^1.1.0",
-    "gulp-istanbul": "^0.5.0",
-    "coveralls": "^2.11.1",
-    "should": "^4.0.4",
-    "jshint-stylish": "^0.4.0",
-    "gulp-load-plugins": "^0.6.0",
-    "gulp-plumber": "^0.6.5"
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-mocha": "^2.0.0",
+    "gulp-plumber": "^0.6.5",
+    "gulp-util": "^3.0.1",
+    "jshint-stylish": "^1.0.0",
+    "should": "^5.0.0"
   },
   "scripts": {
     "coveralls": "gulp test && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
